--- a/JavaScript Tutorial/tut2/index.html
+++ b/JavaScript Tutorial/tut2/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="box">
+        <h1 class="heading">Time</h1>
+        <dive id="date"></dive>
+        <div id="time"></div>
+
+    </div>
     <h1 id="heading"></h1>
     <script src="tut2.js"></script>
 </body>
