--- a/JavaScript Tutorial/tut4/index.html
+++ b/JavaScript Tutorial/tut4/index.html
@@ -8,11 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    What is your favourate Food:
     <input type="text" id="Fav-food" placeholder="Favourate Food">
-    <button onclick="Comment()">Result</button>
-    <div id="head">Hii</div>
+    <button onclick=" ">Result</button>
     <script src="script.js"></script>
 </body>
 </html>
