--- a/JavaScript Tutorial/tut5/index.html
+++ b/JavaScript Tutorial/tut5/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input type="text" id="Id" placeholder="Your age:">
+    <input type="text" id="Id" placeholder="Input">
     <button onclick="your_fun()">Result</button>
 
     <div id="result"></div>
